# a2a-autoscaling

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_a2a_app.py
configs/: .env.template
configs/agents/: calculator-config.toml
docker/agents/calculator/: Dockerfile
docker/agents/infrastructure_monitor/: Dockerfile
docker/agents/move_orchestrator/: Dockerfile
docker/agents/research/: Dockerfile
docker/build-scripts/: build_all_images.sh
docs/: SYSTEM_CAPABILITIES.md  SYSTEM_REQUIREMENTS.md
docs/api/: README.md  a2a-protocol-api.md
docs/architecture/: ARCHITECTURE.md
docs/deployment/: DEPLOYMENT.md
docs/troubleshooting/: README.md
k8s/: load-generator.yaml
k8s/agents/: base-agent.yaml  calculator-agent.yaml  infrastructure-monitor-agent.yaml  move-orchestrator-agent.yaml  namespace.yaml  research-agent.yaml  streamlit-app.yaml  weather-agent.yaml
k8s/autoscaling/: hpa-ai-ops-agents.yaml  hpa-base-agent.yaml  hpa-weather-research.yaml
k8s/monitoring/: a2a-agents-dashboard.yaml  alertmanager.yaml  grafana.yaml  kube-state-metrics.yaml  kubernetes-alerts.yaml  kubernetes-cluster-dashboard.yaml  node-exporter.yaml  prometheus.yaml  service-monitors.yaml
monitoring/alerts/: alertmanager.yaml
monitoring/rules/: prometheus-recording-rules.yaml
scripts/deployment/: cleanup_system.sh  deploy_complete_system.sh  deploy_full_system.sh  quick_deploy.sh  run_agents.sh  run_enhanced_system.sh
scripts/testing/: cpu_stress_test.py  dashboard_load_test.py  load_test_autoscaling.py  quick_test.sh  simple_cpu_stress.py  test_infrastructure_monitor.py  test_integration_complete.py  test_move_orchestrator.py
scripts/validation/: health_check.sh  validate_kubernetes_deployment.sh  verify_metrics.py  verify_phase1.py
src/: __init__.py
src/agents/: __init__.py
src/agents/base/: Dockerfile  __init__.py  __main__.py  agent.py  agent_executor.py  pyproject.toml  test_client.py
src/agents/calculator/: Dockerfile  __init__.py  __main__.py  agent.py  agent_executor.py  main.py  test_client.py
src/agents/infrastructure_monitor/: Dockerfile  __init__.py  __main__.py  agent-card.json  agent.py
src/agents/move_orchestrator/: Dockerfile  __init__.py  __main__.py  agent-card.json  agent.py
src/agents/research/: Dockerfile  __init__.py  __main__.py  agent.py  agent_executor.py  main.py  pyproject.toml  test_client.py
src/agents/weather/: Dockerfile  __init__.py  __main__.py  agent.py  agent_executor.py  main.py  pyproject.toml  test_client.py
src/clients/: __init__.py  ai_agent_router.py  conversational_client.py  smart_routing_client.py  streaming_conversation_client.py
src/common/: __init__.py  a2a_helper.py  a2a_utils.py  azure_openai.py  metrics.py  reliability.py
src/config/: __init__.py
src/testing/: README.md  __init__.py  config.py
src/testing/host/: __init__.py  agent_discovery.py  agent_discovery_backup.py  agent_discovery_fixed.py  interactive_shell.py  main.py  orchestrator.py  test_runner.py
src/testing/scenarios/: __init__.py
src/testing/utils/: __init__.py  a2a_client.py  test_helpers.py
